[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.1",features = ["blas"] }
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
bevy_ratatui = "0.10.0"
crossterm = "0.29.0"
bevy = { version = "0.17", default-features = false }
bitflags = "2.8.0"
color-eyre = "0.6.3"
ratatui = { version = "0.29.0", default-features = false }
tracing = "0.1.41"
rand = "0.9.2"
